--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
 
     <link
       href="./assets/libs/bootstrap-5.1.0-dist/css/bootstrap.min.css"
@@ -176,12 +176,12 @@
                 </div>
                 <div class="col-4">
                   <img src="./assets/img/icons/Group 28.svg" >
-                  <h6>Vacunatiorio Aut. Secundaria</h6>
+                  <h6>Vacunatorio Aut. Secundaria</h6>
                   <p>Aplica y registra los datos para el certificado</p>
                 </div>
                 <div class="col-4">
                   <img src="./assets/img/icons/Group 29.svg" >
-                  <h6>Ministerio de Salud</h6>
+                  <h6>Ente de Salud</h6>
                   <p>Autoridad Principal</p>
                 </div>
               </div>
@@ -194,12 +194,12 @@
                 </div>
                 <div class="col-4">
                   <img src="./assets/img/icons/Group 32.svg" >
-                  <h6>Entodad Interesada</h6>
-                  <p>Entidad Autorizada en validad el certificado</p>
+                  <h6>Entidad Interesada</h6>
+                  <p>Entidad Autorizada en validar el certificado</p>
                 </div>
                 <div class="col-4">
                   <img src="./assets/img/icons/Group 33.svg" >
-                  <h6>Casa de la Moneda</h6>
+                  <h6>Entidad Central</h6>
                   <p>Autoridad Raiz</p>
                 </div>
               </div>
