Fix: Change text from Identidad Aumentada

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <div class="col-md-6 align-self-center text-center contain-blue-gray">
             <h2>Identidad Aumentada</h2>
             <p>
-              Se establece un modelo por el cuál, partiendo de la validación del individuo por el Registro Nacional de las Personas, Renaper, se van activando distintos nodos de información que van suministrando distintos tipos de información: Salud, Seguridad Social, Status impositivo y otros.
+              Se establece un modelo por el cuál, partiendo de la validación del individuo por una entidad gubernamental , se van activando distintos nodos de información que van suministrando distintos tipos de información: Salud, Seguridad Social, Status impositivo y otros.
             </p>
           </div>
           <div class="col-md-6 text-center">
