--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section id="about">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 align-self-center text-center px-4 contain-gray">
+            <div class="col-md-6 align-self-center text-center px-4 contain-gray slide-in from-left">
               <h2>¿Quiénes somos?</h2>
               <p>
                 Somos una startup innovadora que busca ayudar a empresas y
@@ -85,7 +85,7 @@
                 intrumentos de pago y reserva de activos.
               </p>
             </div>
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center slide-in from-right">
               <img
                 src="./assets/img/sections/blockchain 1.png"
               />
@@ -97,13 +97,12 @@
       <section class="bg-light" id="we-do">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center slide-in from-left">
               <img
                 src="./assets/img/sections/B1_1 1.png"
               />
             </div>
-
-            <div class="col-md-6 align-self-center text-center contain-blue p">
+            <div class="col-md-6 align-self-center text-center contain-blue slide-in from-left">
               <h2>¿Qué hacemos?</h2>
               <p>
                 Con la irrupción del blockchain como tecnología, comienzan a
@@ -122,7 +121,7 @@
       <section id="technology">
         <div class="container">
           <div class="row">
-            <div class="col-md-6 align-self-center text-center contain-gray">
+            <div class="col-md-6 align-self-center text-center contain-gray slide-in from-left">
               <h2>Tecnología</h2>
               <p>
                 Desde SecureFile desarrollamos nuestra propia blockchain, NxtFi,
@@ -133,7 +132,7 @@
                 validar las transacciones.
               </p>
             </div>
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center slide-in from-right">
               <img
                 src="./assets/img/sections/B2_2 1.png"
               />
@@ -155,7 +154,7 @@
     <section id="cases">
       <div class="container">
         <div class="row">
-          <div class="col-md-5 align-self-center text-center contain-blue-gray">
+          <div class="col-md-5 align-self-center text-center contain-blue-gray slide-in from-right">
             <h2>Casos de Negocio utilizando <b>NxtFi</b></h2>
 
             <h2>Certificado digital
@@ -167,7 +166,7 @@
             </p>
           </div>
           <div clasS="col-md-2"></div>
-          <div class="col-md-5 align-self-center">
+          <div class="col-md-5 align-self-center slide-in from-left">
               <div class="row justify-content-center digital-vaccine">
                 <div class="col-4">
                   <img src="./assets/img/icons/Group 30.svg" >
@@ -211,13 +210,13 @@
     <section class="bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 text-center ">
+          <div class="col-md-6 text-center slide-in from-left">
             <img
               src="./assets/img/sections/bbb 1.png"
             />
           </div>
 
-          <div class="col-md-6 align-self-center text-center contain-blue">
+          <div class="col-md-6 align-self-center text-center contain-blue slide-in from-left">
             <h2>Tokenización <br>
               de activos</h2>
             <p>
@@ -232,13 +231,13 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-md-6 align-self-center text-center contain-blue-gray">
+          <div class="col-md-6 align-self-center text-center contain-blue-gray slide-in from-right">
             <h2>Identidad Aumentada</h2>
             <p>
               Se establece un modelo por el cuál, partiendo de la validación del individuo por una entidad gubernamental , se van activando distintos nodos de información que van suministrando distintos tipos de información: Salud, Seguridad Social, Status impositivo y otros.
             </p>
           </div>
-          <div class="col-md-6 text-center">
+          <div class="col-md-6 text-center slide-in from-right">
             <img
               src="./assets/img/sections/IdentidadA.png"
             />
