--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
     <div class="bgimage-features">
         <div class="container">
-            <div class=" feature-text">
+            <div class=" feature-text fade-in">
               <h1 class="text-center py-5">¿Cómo funciona?</h1>
               <div class="text-center"><img src="./assets/img/sections/Group 12.png" ></div>
             </div>
