add: improve header

--- a/index.html
+++ b/index.html
@@ -21,13 +21,21 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="header">
       <div class="container">
-          <a class="navbar-brand" href="index.html">
+          <a class=" ui-variable-logo navbar-brand" href="/">
+
             <img
-              class="logo-default"
-              src="./assets/img/logos/NSTFI WHITE 1.svg"
+              class="logo-transparent"
+              src="./assets/img/logos/NXTFIwhite_1.svg"
               alt="NxtFi logo"
               width="170"
             />
+
+            <img
+              class="logo-default"
+              src="./assets/img/logos/nxtfi.svg"
+              alt="NxtFi logo"
+              width="170"
+          />
           </a>
           <div class="navigation">
             <ul class="nav navbar-nav">
