add: link footer logo correctly

--- a/index.html
+++ b/index.html
@@ -277,7 +277,9 @@
           </div>
 
           <div class="text-center">
-            <img src="./assets/img/logos/NSTFI WHITE 1.svg" alt="NxtFi">
+            <img src="./assets/img/logos/NXTFIwhite_1.svg" 
+            width="450"
+            alt="NxtFi">
           </div>
 
           <div>       
