--- a/index.html
+++ b/index.html
@@ -1,162 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      href="./assets/libs/bootstrap-5.1.0-dist/css/bootstrap.min.css"
-      rel="stylesheet"
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+  <link href="./assets/libs/bootstrap-5.1.0-dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./assets/css/styles.css" />
+  <title>NxtFi</title>
+</head>
 
-    />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <title>NxtFi</title>
-  </head>
-  <body>
+<body>
+  <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="header">
+    <div class="container">
+      <a class=" ui-variable-logo navbar-brand" href="/">
+        <img class="logo-transparent" src="./assets/img/logos/NXTFIwhite_1.svg" alt="NxtFi logo" width="170" />
+        <img class="logo-default" src="./assets/img/logos/nxtfi.svg" alt="NxtFi logo" width="170" />
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+        aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon">
+          <i class="bi bi-list"></i>
+        </span>
+      </button>
 
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="header">
-      <div class="container">
-          <a class=" ui-variable-logo navbar-brand" href="/">
-
-            <img
-              class="logo-transparent"
-              src="./assets/img/logos/NXTFIwhite_1.svg"
-              alt="NxtFi logo"
-              width="170"
-            />
-
-            <img
-              class="logo-default"
-              src="./assets/img/logos/nxtfi.svg"
-              alt="NxtFi logo"
-              width="170"
-          />
-          </a>
-          <div class="navigation">
-            <ul class="nav navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#about">Quiénes Somos</a>
-              </li>
-  
-              <li class="nav-item">
-                <a class="nav-link" href="#we-do">Soluciones</a>
-              </li>
-  
-              <li class="nav-item">
-                <a class="nav-link" href="#cases">Casos de Negocio</a>
-              </li>
-  
-              <li class="nav-item">
-                <a class="nav-link" href="#contact">Contacto</a>
-              </li>
-            </ul>
-          </div>
-      
-
+      <div class="navigation collapse navbar-collapse" id="navbarScroll">
+        <ul class="nav navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
+          <li class="nav-item">
+            <a class="nav-link" href="#about">Quiénes Somos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#we-do">Soluciones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#cases">Casos de Negocio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contacto</a>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
-    <!-- Main Wrapper -->
-    <div class="main">
-      <!-- Waves Hero -->
+  <div class="main">
+    <div class="bgimage-hero">
+      <div class="container-fluid">
+        <div class="hero-text">
+          <h2>Reimagina las finanzas</h2>
+          <p>
+            Te ayudamos en el camino de la adopción del <b>blockchain</b> <br> facilitando
+            la aplicación de su uso en las industrias más tradicionales
+          </p>
+        </div>
+      </div>
+    </div>
 
-      <div class="bgimage-hero">
-        <div class="container-fluid">
-            <div class="hero-text">
-            <h2>Reimagina las finanzas</h2>
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 align-self-center text-center px-4 contain-gray slide-in from-left">
+            <h2>¿Quiénes somos?</h2>
             <p>
-              Te ayudamos en el camino de la adopción del <b>blockchain</b> <br> facilitando 
-              la aplicación de su uso en las industrias más tradicionales
+              Somos una startup innovadora que busca ayudar a empresas y
+              organizanizaciones en el camino de la adopción del blockchain
+              facilitando la aplicación en las industrias mas tradicionales.
+            </p>
+            <p>
+              Nuestra experiencia en la industria financiera nos permite
+              reinventar las finanzas desde de la perspectivas de nuevos
+              intrumentos de pago y reserva de activos.
+            </p>
+          </div>
+          <div class="col-md-6 text-center slide-in from-right">
+            <img src="./assets/img/sections/blockchain 1.png" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="bg-light" id="we-do">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 text-center slide-in from-left">
+            <img src="./assets/img/sections/B1_1 1.png" />
+          </div>
+          <div class="col-md-6 align-self-center text-center contain-blue slide-in from-left">
+            <h2>¿Qué hacemos?</h2>
+            <p>
+              Con la irrupción del blockchain como tecnología, comienzan a
+              surgir un sinnúmero de aplicaciones para diversos casos de
+              negocio en donde se requiere validar o autorizar transacciones,
+              tokenizar un contrato o inclusive un activo real, pero teniendo
+              en consideración un modelo de seguridad similar a la seguridad
+              física que brinda confiabilidad de velocidad en las
+              transacciones.
             </p>
           </div>
         </div>
       </div>
+    </section>
 
-      <section id="about">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 align-self-center text-center px-4 contain-gray slide-in from-left">
-              <h2>¿Quiénes somos?</h2>
-              <p>
-                Somos una startup innovadora que busca ayudar a empresas y
-                organizanizaciones en el camino de la adopción del blockchain
-                facilitando la aplicación en las industrias mas tradicionales.
-              </p>
-              <p>
-                Nuestra experiencia en la industria financiera nos permite
-                reinventar las finanzas desde de la perspectivas de nuevos
-                intrumentos de pago y reserva de activos.
-              </p>
-            </div>
-            <div class="col-md-6 text-center slide-in from-right">
-              <img
-                src="./assets/img/sections/blockchain 1.png"
-              />
-            </div>
+    <section id="technology">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 align-self-center text-center contain-gray slide-in from-left">
+            <h2>Tecnología</h2>
+            <p>
+              Desde SecureFile desarrollamos nuestra propia blockchain, NxtFi,
+              una cadena de tercera generación basada en la nube que facilita
+              su adopción e implementación. Esto permite una gran eficiencia
+              en tiempos de implementación y un bajo costo de implementación,
+              sin depender de los problemas de minería y el costo del gas para
+              validar las transacciones.
+            </p>
+          </div>
+          <div class="col-md-6 text-center slide-in from-right">
+            <img src="./assets/img/sections/B2_2 1.png" />
           </div>
         </div>
-      </section>
-
-      <section class="bg-light" id="we-do">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 text-center slide-in from-left">
-              <img
-                src="./assets/img/sections/B1_1 1.png"
-              />
-            </div>
-            <div class="col-md-6 align-self-center text-center contain-blue slide-in from-left">
-              <h2>¿Qué hacemos?</h2>
-              <p>
-                Con la irrupción del blockchain como tecnología, comienzan a
-                surgir un sinnúmero de aplicaciones para diversos casos de
-                negocio en donde se requiere validar o autorizar transacciones,
-                tokenizar un contrato o inclusive un activo real, pero teniendo
-                en consideración un modelo de seguridad similar a la seguridad
-                física que brinda confiabilidad de velocidad en las
-                transacciones.
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="technology">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 align-self-center text-center contain-gray slide-in from-left">
-              <h2>Tecnología</h2>
-              <p>
-                Desde SecureFile desarrollamos nuestra propia blockchain, NxtFi,
-                una cadena de tercera generación basada en la nube que facilita
-                su adopción e implementación. Esto permite una gran eficiencia
-                en tiempos de implementación y un bajo costo de implementación,
-                sin depender de los problemas de minería y el costo del gas para
-                validar las transacciones.
-              </p>
-            </div>
-            <div class="col-md-6 text-center slide-in from-right">
-              <img
-                src="./assets/img/sections/B2_2 1.png"
-              />
-            </div>
-          </div>
-        </div>
-      </section>
-
+      </div>
+    </section>
 
     <div class="bgimage-features">
-        <div class="container">
-            <div class=" feature-text fade-in">
-              <h1 class="text-center py-5">¿Cómo funciona?</h1>
-              <div class="text-center"><img src="./assets/img/sections/Group 12.png" ></div>
-            </div>
+      <div class="container">
+        <div class=" feature-text fade-in">
+          <h1 class="text-center py-5">¿Cómo funciona?</h1>
+          <div class="text-center"><img src="./assets/img/sections/Group 12.png"></div>
         </div>
+      </div>
     </div>
 
     <section id="cases">
@@ -164,52 +140,52 @@
         <div class="row">
           <div class="col-md-5 align-self-center text-center contain-blue-gray slide-in from-right">
             <h2>Casos de Negocio utilizando <b>NxtFi</b></h2>
-
             <h2>Certificado digital
               de vacunación
             </h2>
-
             <p>
-              Se utilizó <b>NxtFi</b> para crear un certificado digital de vacunación donde figura un registro con los datos de la vacuna (fecha, marca, lote, nro de dosis) y listado de testeos realizados en laboratorios autorizados por el usuario
+              Se utilizó <b>NxtFi</b> para crear un certificado digital de vacunación donde figura un registro con los
+              datos de la vacuna (fecha, marca, lote, nro de dosis) y listado de testeos realizados en laboratorios
+              autorizados por el usuario
             </p>
           </div>
           <div clasS="col-md-2"></div>
           <div class="col-md-5 align-self-center slide-in from-left">
-              <div class="row justify-content-center digital-vaccine">
-                <div class="col-4">
-                  <img src="./assets/img/icons/Group 30.svg" >
-                  <h6>Persona</h6>
-                  <p></p>
-                </div>
-                <div class="col-4">
-                  <img src="./assets/img/icons/Group 28.svg" >
-                  <h6>Vacunatorio Aut. Secundaria</h6>
-                  <p>Aplica y registra los datos para el certificado</p>
-                </div>
-                <div class="col-4">
-                  <img src="./assets/img/icons/Group 29.svg" >
-                  <h6>Ente de Salud</h6>
-                  <p>Autoridad Principal</p>
-                </div>
+            <div class="row justify-content-center digital-vaccine">
+              <div class="col-4">
+                <img src="./assets/img/icons/Group 30.svg">
+                <h6>Persona</h6>
+                <p></p>
               </div>
+              <div class="col-4">
+                <img src="./assets/img/icons/Group 28.svg">
+                <h6>Vacunatorio Aut. Secundaria</h6>
+                <p>Aplica y registra los datos para el certificado</p>
+              </div>
+              <div class="col-4">
+                <img src="./assets/img/icons/Group 29.svg">
+                <h6>Ente de Salud</h6>
+                <p>Autoridad Principal</p>
+              </div>
+            </div>
 
-              <div class="row justify-content-center digital-vaccine">
-                <div class="col-4">
-                  <img src="./assets/img/icons/Group 31.svg" >
-                  <h6>Persona</h6>
-                  <p></p>
-                </div>
-                <div class="col-4">
-                  <img src="./assets/img/icons/Group 32.svg" >
-                  <h6>Entidad Interesada</h6>
-                  <p>Entidad Autorizada en validar el certificado</p>
-                </div>
-                <div class="col-4">
-                  <img src="./assets/img/icons/Group 33.svg" >
-                  <h6>Entidad Central</h6>
-                  <p>Autoridad Raiz</p>
-                </div>
+            <div class="row justify-content-center digital-vaccine">
+              <div class="col-4">
+                <img src="./assets/img/icons/Group 31.svg">
+                <h6>Persona</h6>
+                <p></p>
               </div>
+              <div class="col-4">
+                <img src="./assets/img/icons/Group 32.svg">
+                <h6>Entidad Interesada</h6>
+                <p>Entidad Autorizada en validar el certificado</p>
+              </div>
+              <div class="col-4">
+                <img src="./assets/img/icons/Group 33.svg">
+                <h6>Entidad Central</h6>
+                <p>Autoridad Raiz</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -219,22 +195,20 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center slide-in from-left">
-            <img
-              src="./assets/img/sections/bbb 1.png"
-            />
+            <img src="./assets/img/sections/bbb 1.png" />
           </div>
-
           <div class="col-md-6 align-self-center text-center contain-blue slide-in from-left">
             <h2>Tokenización <br>
               de activos</h2>
             <p>
-              Se utilizó <b>NxtFi</b> para plantear una plataforma de tokenización de activos reales, permitiendo virtualizar practicamente cualquier insumo, materia prima o producto terminado que pueda ser realizable con facilidad
+              Se utilizó <b>NxtFi</b> para plantear una plataforma de tokenización de activos reales, permitiendo
+              virtualizar practicamente cualquier insumo, materia prima o producto terminado que pueda ser realizable
+              con facilidad
             </p>
           </div>
         </div>
       </div>
     </section>
-
 
     <section>
       <div class="container">
@@ -242,13 +216,13 @@
           <div class="col-md-6 align-self-center text-center contain-blue-gray slide-in from-right">
             <h2>Identidad Aumentada</h2>
             <p>
-              Se establece un modelo por el cuál, partiendo de la validación del individuo por una entidad gubernamental , se van activando distintos nodos de información que van suministrando distintos tipos de información: Salud, Seguridad Social, Status impositivo y otros.
+              Se establece un modelo por el cuál, partiendo de la validación del individuo por una entidad gubernamental
+              , se van activando distintos nodos de información que van suministrando distintos tipos de información:
+              Salud, Seguridad Social, Status impositivo y otros.
             </p>
           </div>
           <div class="col-md-6 text-center slide-in from-right">
-            <img
-              src="./assets/img/sections/IdentidadA.png"
-            />
+            <img src="./assets/img/sections/IdentidadA.png" />
           </div>
         </div>
       </div>
@@ -259,17 +233,16 @@
         <div class="footer">
           <div class="bg-form">
             <h2 class="text-center">¡Contáctanos!</h2>
-            <form class="row g-3" >
+            <form class="row g-3">
               <div class="col-md-6">
-                <input type="text" class="form-control" placeholder="Nombre" >
+                <input type="text" class="form-control" placeholder="Nombre">
               </div>
               <div class="col-md-6">
-                <input type="text" class="form-control" placeholder="Email" >
+                <input type="text" class="form-control" placeholder="Email">
               </div>
               <div class="col-12">
-                <textarea class="form-control" placeholder="Mensaje"rows="3" cols="5"></textarea>
+                <textarea class="form-control" placeholder="Mensaje" rows="3" cols="5"></textarea>
               </div>
-    
               <div class="col-12">
                 <button type="submit" class="btn">Enviar</button>
               </div>
@@ -277,12 +250,9 @@
           </div>
 
           <div class="text-center">
-            <img src="./assets/img/logos/NXTFIwhite_1.svg" 
-            width="450"
-            alt="NxtFi">
+            <img src="./assets/img/logos/NXTFIwhite_1.svg" width="450" alt="NxtFi">
           </div>
-
-          <div>       
+          <div>
             <ul class="nav justify-content-center navbar-dark">
               <li class="nav-item">
                 <a class="nav-link" href="#about">Quiénes somos</a>
@@ -302,18 +272,14 @@
             <span>©2021 NtxFi, All rights reserved.</sp>
           </footer>
         </div>
-
+      </div>
     </div>
-    </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="./assets/libs/bootstrap-5.1.0-dist/js/bootstrap.min.js"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous">
+    </script>
+    <script src="./assets/libs/bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
     <script src="./assets/js/app.js"></script>
-  </body>
+</body>
+
 </html>
