--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="header">
+  <!-- <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="header">
     <div class="container">
       <a class=" ui-variable-logo navbar-brand" href="/">
         <img class="logo-transparent" src="./assets/img/logos/NXTFIwhite_1.svg" alt="NxtFi logo" width="170" />
@@ -45,7 +45,7 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
 
   <div class="main">
     <div class="bgimage-hero">
@@ -60,7 +60,7 @@
       </div>
     </div>
 
-    <section id="about">
+    <!-- <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-md-6 align-self-center text-center px-4 contain-gray slide-in from-left">
@@ -81,9 +81,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="bg-light" id="we-do">
+    <!-- <section class="bg-light" id="we-do">
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center slide-in from-left">
@@ -103,9 +103,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section id="technology">
+    <!-- <section id="technology">
       <div class="container">
         <div class="row">
           <div class="col-md-6 align-self-center text-center contain-gray slide-in from-left">
@@ -124,7 +124,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <div class="bgimage-features">
       <div class="container">
@@ -135,7 +135,7 @@
       </div>
     </div>
 
-    <section id="cases">
+    <!-- <section id="cases">
       <div class="container">
         <div class="row">
           <div class="col-md-5 align-self-center text-center contain-blue-gray slide-in from-right">
@@ -189,9 +189,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section class="bg-light">
+    <!-- <section class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center slide-in from-left">
@@ -208,9 +208,9 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
-    <section>
+    <!-- <section>
       <div class="container">
         <div class="row">
           <div class="col-md-6 align-self-center text-center contain-blue-gray slide-in from-right">
@@ -226,7 +226,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <div class="bgimage-features" id="contact">
       <div class="container">
