--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./assets/img/favicon.ico" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/libs/normalize/normalize.css">
   <link href="./assets/libs/bootstrap-5.1.0-dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./assets/css/styles.css" />
   <title>NxtFi</title>
 </head>
 
 <body>
-  <!-- <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="header">
+  <nav class="navbar navbar-expand-lg fixed-top navbar-dark" id="header">
     <div class="container">
       <a class=" ui-variable-logo navbar-brand" href="/">
         <img class="logo-transparent" src="./assets/img/logos/NXTFIwhite_1.svg" alt="NxtFi logo" width="170" />
@@ -45,10 +43,9 @@
         </ul>
       </div>
     </div>
-  </nav> -->
-
+  </nav>
   <div class="main">
-    <div class="bgimage-hero">
+    <div class="hero">
       <div class="container-fluid">
         <div class="hero-text">
           <h2>Reimagina las finanzas</h2>
@@ -60,7 +57,8 @@
       </div>
     </div>
 
-    <!-- <section id="about">
+
+    <section id="about">
       <div class="container">
         <div class="row">
           <div class="col-md-6 align-self-center text-center px-4 contain-gray slide-in from-left">
@@ -81,9 +79,10 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="bg-light" id="we-do">
+<!-- 
+    <section class="bg-light" id="we-do">
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center slide-in from-left">
@@ -104,8 +103,8 @@
         </div>
       </div>
     </section> -->
-
-    <!-- <section id="technology">
+<!-- 
+    <section id="technology">
       <div class="container">
         <div class="row">
           <div class="col-md-6 align-self-center text-center contain-gray slide-in from-left">
@@ -125,7 +124,7 @@
         </div>
       </div>
     </section> -->
-
+<!-- 
     <div class="bgimage-features">
       <div class="container">
         <div class=" feature-text fade-in">
@@ -133,7 +132,7 @@
           <div class="text-center"><img src="./assets/img/sections/Group 12.png"></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- <section id="cases">
       <div class="container">
@@ -228,7 +227,7 @@
       </div>
     </section> -->
 
-    <div class="bgimage-features" id="contact">
+    <!-- <div class="bgimage-features" id="contact">
       <div class="container">
         <div class="footer">
           <div class="bg-form">
@@ -273,13 +272,10 @@
           </footer>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous">
-    </script>
-    <script src="./assets/libs/bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
-    <script src="./assets/js/app.js"></script>
+  </div>
+
 </body>
 
 </html>
