--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
     </section>
 
-<!-- 
+
     <section class="bg-light" id="we-do">
       <div class="container">
         <div class="row">
@@ -102,8 +102,8 @@
           </div>
         </div>
       </div>
-    </section> -->
-<!-- 
+    </section>
+    
     <section id="technology">
       <div class="container">
         <div class="row">
@@ -123,8 +123,8 @@
           </div>
         </div>
       </div>
-    </section> -->
-<!-- 
+    </section>
+    
     <div class="bgimage-features">
       <div class="container">
         <div class=" feature-text fade-in">
@@ -132,9 +132,9 @@
           <div class="text-center"><img src="./assets/img/sections/Group 12.png"></div>
         </div>
       </div>
-    </div> -->
+    </div>
 
-    <!-- <section id="cases">
+    <section id="cases">
       <div class="container">
         <div class="row">
           <div class="col-md-5 align-self-center text-center contain-blue-gray slide-in from-right">
@@ -188,9 +188,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="bg-light">
+    <section class="bg-light">
       <div class="container">
         <div class="row">
           <div class="col-md-6 text-center slide-in from-left">
@@ -207,9 +207,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section>
+    <section>
       <div class="container">
         <div class="row">
           <div class="col-md-6 align-self-center text-center contain-blue-gray slide-in from-right">
@@ -225,9 +225,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <div class="bgimage-features" id="contact">
+    <div class="bgimage-features" id="contact">
       <div class="container">
         <div class="footer">
           <div class="bg-form">
@@ -272,10 +272,14 @@
           </footer>
         </div>
       </div>
-    </div> -->
+    </div>
 
   </div>
-
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+    integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous">
+  </script>
+  <script src="./assets/libs/bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
+  <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
