--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="./assets/img/favicon.ico" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/libs/normalize/normalize.css">
   <link href="./assets/libs/bootstrap-5.1.0-dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./assets/css/styles.css" />
   <title>NxtFi</title>
@@ -46,9 +44,8 @@
       </div>
     </div>
   </nav>
-
   <div class="main">
-    <div class="bgimage-hero">
+    <div class="hero">
       <div class="container-fluid">
         <div class="hero-text">
           <h2>Reimagina las finanzas</h2>
@@ -59,6 +56,7 @@
         </div>
       </div>
     </div>
+
 
     <section id="about">
       <div class="container">
@@ -83,6 +81,7 @@
       </div>
     </section>
 
+
     <section class="bg-light" id="we-do">
       <div class="container">
         <div class="row">
@@ -104,7 +103,7 @@
         </div>
       </div>
     </section>
-
+    
     <section id="technology">
       <div class="container">
         <div class="row">
@@ -125,7 +124,7 @@
         </div>
       </div>
     </section>
-
+    
     <div class="bgimage-features">
       <div class="container">
         <div class=" feature-text fade-in">
@@ -275,11 +274,12 @@
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
-      integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous">
-    </script>
-    <script src="./assets/libs/bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
-    <script src="./assets/js/app.js"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+    integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous">
+  </script>
+  <script src="./assets/libs/bootstrap-5.1.0-dist/js/bootstrap.min.js"></script>
+  <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
