--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
       </div>
     </section>
-    
+
     <section id="technology">
       <div class="container">
         <div class="row">
@@ -124,7 +124,7 @@
         </div>
       </div>
     </section>
-    
+
     <div class="bgimage-features">
       <div class="container">
         <div class=" feature-text fade-in">
@@ -227,11 +227,11 @@
       </div>
     </section>
 
-    <div class="bgimage-features" id="contact">
+    <div class="bgimage-features form-footer" id="contact">
       <div class="container">
         <div class="footer">
           <div class="bg-form">
-            <h2 class="text-center">¡Contáctanos!</h2>
+            <h2 class="text-center form-title">¡Contáctanos!</h2>
             <form class="row g-3">
               <div class="col-md-6">
                 <input type="text" class="form-control" placeholder="Nombre">
@@ -243,7 +243,7 @@
                 <textarea class="form-control" placeholder="Mensaje" rows="3" cols="5"></textarea>
               </div>
               <div class="col-12">
-                <button type="submit" class="btn">Enviar</button>
+                <button type="submit" class="btn btn-enviar">Enviar</button>
               </div>
             </form>
           </div>
@@ -251,22 +251,22 @@
           <div class="text-center">
             <img src="./assets/img/logos/NXTFIwhite_1.svg" width="450" alt="NxtFi">
           </div>
-          <div>
-            <ul class="nav justify-content-center navbar-dark">
-              <li class="nav-item">
-                <a class="nav-link" href="#about">Quiénes somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#we-do">Soluciones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#cases">Casos de Negocio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#contact">Contacto</a>
-              </li>
-            </ul>
-          </div>
+
+          <ul class="nav justify-content-center navbar-dark">
+            <li class="nav-item">
+              <a class="nav-link" href="#about">Quiénes somos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#we-do">Soluciones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#cases">Casos de Negocio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contacto</a>
+            </li>
+          </ul>
+
           <footer>
             <span>©2021 NtxFi, All rights reserved.</sp>
           </footer>
