--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section id="about">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 align-self-center text-center px-4 contain-gray slide-in from-left">
+          <div class="col-lg-6 align-self-center text-center px-4 contain-gray slide-in from-left">
             <h2>¿Quiénes somos?</h2>
             <p>
               Somos una startup innovadora que busca ayudar a empresas y
@@ -74,7 +74,7 @@
               intrumentos de pago y reserva de activos.
             </p>
           </div>
-          <div class="col-md-6 text-center slide-in from-right">
+          <div class="col-lg-6 text-center slide-in from-right">
             <img src="./assets/img/sections/blockchain 1.png" />
           </div>
         </div>
@@ -85,10 +85,10 @@
     <section class="bg-light" id="we-do">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 text-center slide-in from-left">
+          <div class="col-lg-6 text-center slide-in from-left">
             <img src="./assets/img/sections/B1_1 1.png" />
           </div>
-          <div class="col-md-6 align-self-center text-center contain-blue slide-in from-left">
+          <div class="col-lg-6 align-self-center text-center contain-blue slide-in from-left">
             <h2>¿Qué hacemos?</h2>
             <p>
               Con la irrupción del blockchain como tecnología, comienzan a
@@ -107,7 +107,7 @@
     <section id="technology">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 align-self-center text-center contain-gray slide-in from-left">
+          <div class="col-lg-6 align-self-center text-center contain-gray slide-in from-left">
             <h2>Tecnología</h2>
             <p>
               Desde SecureFile desarrollamos nuestra propia blockchain, NxtFi,
@@ -118,7 +118,7 @@
               validar las transacciones.
             </p>
           </div>
-          <div class="col-md-6 text-center slide-in from-right">
+          <div class="col-lg-6 text-center slide-in from-right">
             <img src="./assets/img/sections/B2_2 1.png" />
           </div>
         </div>
@@ -137,7 +137,7 @@
     <section id="cases">
       <div class="container">
         <div class="row">
-          <div class="col-md-5 align-self-center text-center contain-blue-gray slide-in from-right">
+          <div class="col-lg-5 align-self-center text-center contain-blue-gray slide-in from-right">
             <h2>Casos de Negocio utilizando <b>NxtFi</b></h2>
             <h2>Certificado digital
               de vacunación
@@ -148,8 +148,8 @@
               autorizados por el usuario
             </p>
           </div>
-          <div clasS="col-md-2"></div>
-          <div class="col-md-5 align-self-center slide-in from-left">
+          <div clasS="col-lg-2"></div>
+          <div class="col-lg-5 align-self-center slide-in from-left">
             <div class="row justify-content-center digital-vaccine">
               <div class="col-4">
                 <img src="./assets/img/icons/Group 30.svg">
@@ -193,10 +193,10 @@
     <section class="bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 text-center slide-in from-left">
+          <div class="col-lg-6 text-center slide-in from-left">
             <img src="./assets/img/sections/bbb 1.png" />
           </div>
-          <div class="col-md-6 align-self-center text-center contain-blue slide-in from-left">
+          <div class="col-lg-6 align-self-center text-center contain-blue slide-in from-left">
             <h2>Tokenización <br>
               de activos</h2>
             <p>
@@ -212,7 +212,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-md-6 align-self-center text-center contain-blue-gray slide-in from-right">
+          <div class="col-lg-6 align-self-center text-center contain-blue-gray slide-in from-right">
             <h2>Identidad Aumentada</h2>
             <p>
               Se establece un modelo por el cuál, partiendo de la validación del individuo por una entidad gubernamental
@@ -220,7 +220,7 @@
               Salud, Seguridad Social, Status impositivo y otros.
             </p>
           </div>
-          <div class="col-md-6 text-center slide-in from-right">
+          <div class="col-lg-6 text-center slide-in from-right">
             <img src="./assets/img/sections/IdentidadA.png" />
           </div>
         </div>
@@ -233,17 +233,17 @@
           <div class="bg-form">
             <h2 class="text-center form-title">¡Contáctanos!</h2>
             <form class="row g-3">
-              <div class="col-md-6">
+              <div class="col-lg-6">
                 <input type="text" class="form-control" placeholder="Nombre">
               </div>
-              <div class="col-md-6">
+              <div class="col-lg-6">
                 <input type="text" class="form-control" placeholder="Email">
               </div>
               <div class="col-12">
                 <textarea class="form-control" placeholder="Mensaje" rows="3" cols="5"></textarea>
               </div>
               <div class="col-12">
-                <button type="submit" class="btn btn-enviar">Enviar</button>
+                <button type="submit" class="btn">Enviar</button>
               </div>
             </form>
           </div>
