--- a/src/index.html
+++ b/src/index.html
@@ -47,10 +47,11 @@
     <div class="hero">
       <div class="container-fluid">
         <div class="hero-text">
-          <h2>Reimagina las finanzas</h2>
+          <h2>Blockchain para Gobiernos y Privados</h2>
           <p>
-            Te ayudamos en el camino de la adopción del <b>blockchain</b> <br> facilitando
-            la aplicación de su uso en las industrias más tradicionales
+            Ayudamos a Empresas y Gobiernos en el camino de la adopción del <b>Blockchain</b>,<br> brindando soluciones
+            de Trazabilidad, Certificación y Tokenización de Activos.
+
           </p>
         </div>
       </div>
@@ -61,16 +62,15 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 align-self-center text-center px-4 contain-gray slide-in from-left">
-            <h2>¿Quiénes somos?</h2>
+            <h2>Acerca de Nosotros</h2>
             <p>
-              Somos una startup innovadora que busca ayudar a empresas y
-              organizanizaciones en el camino de la adopción del blockchain
-              facilitando la aplicación en las industrias mas tradicionales.
+              Somos una BaaS (Blockchain as a Service) mediante la cual ayudamos a empresas y organizanizaciones en el
+              camino de la adopción del Blockchain facilitando la aplicación en las industrias mas tradicionales
             </p>
+
             <p>
-              Nuestra experiencia en la industria financiera nos permite
-              reinventar las finanzas desde de la perspectivas de nuevos
-              intrumentos de pago y reserva de activos.
+              Agregamos valor a diversas instituciones mediante soluciones de Trazabibilidad - Certificación -
+              Tokenización de Activos.
             </p>
           </div>
           <div class="col-lg-6 text-center slide-in from-right">
@@ -88,14 +88,15 @@
             <img src="./assets/img/sections/B1_1 1.png" />
           </div>
           <div class="col-lg-6 align-self-center text-center contain-blue slide-in from-left">
-            <h2>¿Qué hacemos?</h2>
+            <h2>NxtFi Blockchain</h2>
+
             <p>
-              Con la irrupción del blockchain como tecnología, comienzan a
-              surgir un sinnúmero de aplicaciones para diversos casos de
-              negocio en donde se requiere validar o autorizar transacciones,
-              tokenizar un contrato o inclusive un activo real, pero teniendo
-              en consideración un modelo de seguridad similar a la seguridad
-              física que brinda confiabilidad de velocidad en las
+              NxtFi Blockchain es una Blockchain privada, de tercera generación, basada en la nueva y con integraciones
+              y soluciones basadas en APIs que facilita su adopción, implementación y escalabilidad.
+            </p>
+            <p>
+              Nuestra arquitectura está diseñada para ofrecer una eficiencia en tiempos de implementación y un bajo
+              costo de implementación, sin depender de los problemas de minería y el costo del gas para validar las
               transacciones.
             </p>
           </div>
@@ -103,7 +104,7 @@
       </div>
     </section>
 
-    <section id="technology">
+    <!-- <section id="technology">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 align-self-center text-center contain-gray slide-in from-left">
@@ -122,7 +123,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <div class="bgimage-features">
       <div class="container">
