--- a/src/index.html
+++ b/src/index.html
@@ -104,26 +104,37 @@
       </div>
     </section>
 
-    <!-- <section id="technology">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 align-self-center text-center contain-gray slide-in from-left">
-            <h2>Tecnología</h2>
-            <p>
-              Desde SecureFile desarrollamos nuestra propia blockchain, NxtFi,
-              una cadena de tercera generación basada en la nube que facilita
-              su adopción e implementación. Esto permite una gran eficiencia
-              en tiempos de implementación y un bajo costo de implementación,
-              sin depender de los problemas de minería y el costo del gas para
-              validar las transacciones.
-            </p>
+    <section id="solutions" class="solutions">
+      <div class="container-fluid">
+        <h2 class="text-center pb-3">Soluciones</h2>
+        <div class="solutions-list">
+          <div>
+            <img src="./assets/img/solutions/trazabilidad.png" class="img-fluid" alt="trazabilidad">
+            <p>Trazabilidad</p>
           </div>
-          <div class="col-lg-6 text-center slide-in from-right">
-            <img src="./assets/img/sections/B2_2 1.png" />
+          <div>
+            <img src="./assets/img/solutions/certificacion.jpg" class="img-fluid" alt="certificacion">
+            <p>Certificacion</p>
+          </div>
+          <div>
+            <img src="./assets/img/solutions/tokenizacion.png" class="img-fluid" alt="tokenizacion">
+            <p>Tokenizacion</p>
+          </div>
+          <div>
+            <img src="./assets/img/solutions/credenciales.png" class="img-fluid" alt="credenciales">
+            <p>Credenciales</p>
+          </div>
+          <div>
+            <img src="./assets/img/solutions/nft.jpg" class="img-fluid" alt="nft">
+            <p>NFT's</p>
+          </div>
+          <div>
+            <img src="./assets/img/solutions/payment.jpg" class="img-fluid" alt="payment">
+            <p>Payments</p>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <div class="bgimage-features">
       <div class="container">
