update NxtFi Blockchain text

--- a/src/index.html
+++ b/src/index.html
@@ -91,8 +91,8 @@
             <h2>NxtFi Blockchain</h2>
 
             <p>
-              NxtFi Blockchain es una Blockchain privada, de tercera generación, basada en la nueva y con integraciones
-              y soluciones basadas en APIs que facilita su adopción, implementación y escalabilidad.
+              NxtFi es una Blockchain privada (Proof of Authority), de tercera generación, con integraciones y
+              soluciones basadas en APIs que facilita su adopción, implementación y escalabilidad.
             </p>
             <p>
               Nuestra arquitectura está diseñada para ofrecer una eficiencia en tiempos de implementación y un bajo
